--- a/AirPassengers_Forecast.ipynb
+++ b/AirPassengers_Forecast.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np #Linear Algebra\n",
     "import pandas as pd #Data Anlysis or Processing \n",
     "import matplotlib.pylab as plt # Data Visualization \n",
-    "%matplotlib inline \n",
+    "%matplotlib inline # So Everything happens inside Jupyter notebook itself\n",
     "from matplotlib.pylab import rcParams\n",
     "rcParams['figure.figsize']= 10,6 "
    ]
